--- a/shifts/src/main/res/values/strings.xml
+++ b/shifts/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
 
     <string name="shift_start_shift">Start Shift</string>
     <string name="shift_end_shift">End Shift</string>
+    <string name="shift_permission_granted">Permissions granted</string>
 
 </resources>
